# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  14 Nov 2004; Brian Harring <ferringb@gentoo.org> spec/emerge.syntax:
  Bye bye emerge.syntax, we hardly knew ye.

  14 Nov 2004; Marius Mauch <genone@gentoo.org> bin/emerge, man/make.conf.5,
  spec/emerge.syntax, cnf/make.conf.*, cnf/make.globals*:
  removing all support for AUTOCLEAN=no, it's breaking too many things these
  days and has no real use anyway.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/dcache.py:
  Updated to make it more memory efficient- slots based, uses weakref
  to handle symlink'd dirs.  Still a bit slower, but it's also stat'ing
  all directories upto the target directory.  That can probably be removed.
  Note, there is a bug in it currently- invalidate isn't a valid node method.
  Nobody should hit this though, since dcache is only used in treewalk.
  I'll correct it in a few days.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_locks.py:
  Reversion of lock choice strategy to what I stuck in originally, and 
  removal of the 3s sleep in hardlink.  The 3s is obviously bad, the 
  reason for reverting to trying flock then lockf then hardlink is simple-
  hardlink is slow, and requires creation of extra files on disk.  It
  also won't behave with fd's passed in (which should be used often, 
  rather then this lets default to creating lots of files strategy.  This makes 
  a huge difference in runtime in certain cases.  Case that exposed this- 
  9m relying on lockf -> hardlink reduced to 1.5m for flock -> lockf -> 
  hardlink.  The difference?  lockf didn't work on that fs, so it was using
  hardlink.  Leave it in, it's faster, it's redundant, and it works.
