@@ -9,6 +9,13 @@ class PortageException(Exception):
 	def __str__(self):
 		return repr(self.value)
 
+class UnknownCondition(PortageException):
+	"""Corruption indication"""
+	def __init__(self,value):
+		self.value = value[:]
+	def __str__(self):
+		return repr(self.value)
+
 class CorruptionError(PortageException):
 	"""Corruption indication"""
 	def __init__(self,value):
